<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.unete.kvalenzuela.unete_2.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:padding="8dp">

        <ImageView
            android:id="@+id/gallery"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:contentDescription="@string/photo_gallery"
            android:src="@drawable/ph_1" />

        <Button
            android:id="@+id/donateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/fab_margin"
            android:background="@color/colorAccent"
            android:onClick="donateScreen"
            android:text="@string/donateBtn"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/catMenu1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <ImageView
                android:id="@+id/cat1"
                android:layout_width="83dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:src="@mipmap/logo_login"
                android:onClick="medioAmbienteCat"/>
            <ImageView
                android:id="@+id/cat2"
                android:layout_width="83dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:src="@mipmap/logo_login" />
            <ImageView
                android:id="@+id/cat3"
                android:layout_width="83dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:src="@mipmap/logo_login" />
            <ImageView
                android:id="@+id/cat4"
                android:layout_width="83dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:src="@mipmap/logo_login" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/catMenu2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <ImageView
                android:id="@+id/cat5"
                android:layout_width="83dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:src="@mipmap/logo_login" />
            <ImageView
                android:id="@+id/cat6"
                android:layout_width="83dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:src="@mipmap/logo_login" />
            <ImageView
                android:id="@+id/cat7"
                android:layout_width="83dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:src="@mipmap/logo_login" />
            <ImageView
                android:id="@+id/cat8"
                android:layout_width="83dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:src="@mipmap/logo_login" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/linkServSocial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/link_serv_social"
                android:padding="8dp"
                android:text="@string/link_serv_social"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/linkRedesSociales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/link_sign_up"
                android:padding="8dp"
                android:text="Redes sociales"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
